[metadata]
name = wg_conf
version = 1.0.0
author = Galen Guyer
author_email = galen@galenguyer.com
description = Manage Wireguard configuration files
url = https://github.com/galenguyer/wg_conf
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable

[options]
packages = find:
python_requires = >=3.6
